--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body {
 
 /* Navigation Bar */
 .navbar {
-	background-color: white;
+	background-color: E7E7E7;
 }
 .nav-item {
 	float:right;
@@ -21,13 +21,37 @@ body {
 /*  Main Screen   */
 
 
+/* contact   */
+.contact {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	text-align: center;
+}
+.contact-p {
+	margin-left: auto;
+	margin-right: auto;
+}
+.contact .card-body {
+	height: 8vh;
+}
+.contact .card .fa {
+	position: absolute;
+	vertical-align: middle;
+
+}
+.contact .card .fa-linkedin-square {
+	left: 1rem;
+}
+.contact .card .fa-github {
+	left: 4rem;
+}
 
 
-
-
-
-
-
+.placeholder img{
+	height: 20rem;
+	width: 25rem;
+}
 .main h1 {
 	font-size: 50px;
 	letter-spacing: 7px;
@@ -40,6 +64,7 @@ body {
 }
 .work {
 	text-align: center;
+	margin-top: 2rem;
 }
 .work h1 {
 	font-size: 30px;
@@ -57,19 +82,4 @@ body {
 .project p {
 	font-size: 20px;
 }
-.about-me {
-	text-align: center;
 
-}
-.about-me img {
-	border-radius: 50%;
-}
-.socials {
-	text-align: center;
-	background-color: white;
-	height: 60px;
-	width: 400px;
-	margin:0 auto;
-	padding-top: 7px;
-	border-radius: 10px;
-}
