added a contact bar

--- a/main.css
+++ b/main.css
@@ -30,6 +30,21 @@ body {
 	width: 100%;
 	text-align: center;
 }
+.contact .btn-primary {
+	background-color: rgba(0, 0, 0, 0);
+	border: none;
+	color: grey;
+}
+.contact .btn:focus {
+	text-decoration-color: none;
+	outline: none;
+	box-shadow: none;
+}
+.contact .btn:hover {
+    transition: all 280ms ease-in-out;
+	letter-spacing: 3px;
+	border: 1px solid rgba(#fff, 0);
+}
 .contact-p {
 	margin-left: auto;
 	margin-right: auto;
@@ -37,19 +52,13 @@ body {
 .contact .card-body {
 	height: 8vh;
 }
-.contact .card .fa {
+.contact .social {
 	position: absolute;
-	vertical-align: middle;
-
-}
-.contact .card .fa-linkedin-square {
 	left: 1rem;
-}
-.contact .card .fa-github {
-	left: 4rem;
+	top:0;
 }
 
-
+/*            */
 .placeholder img{
 	height: 20rem;
 	width: 25rem;
@@ -65,14 +74,15 @@ body {
 	color: white;
 }
 .work {
-	text-align: center;
 	margin-top: 2rem;
 }
 .work h1 {
 	font-size: 30px;
+	float: left;
 }
 .col-md-4 {
 	display: inline-block;
+
 }
 .project {
 	height: 14em;
