added to the work page

--- a/work.css
+++ b/work.css
@@ -1,10 +1,26 @@
 body {
 	background-color: white;
 }
+/* Navigation Bar */
+.navbar {
+	background-color: #E7E7E7;
+}
+.nav-item {
+	float:right;
+}
+.navbar-nav {
+	position: absolute;
+	right:0%;
+}
+h1 {
+	text-align: center;
+	margin-top: 3rem;
+	font-size: 3rem;
+}
 .calc {
 	display: block;
 	margin:8rem auto;
-	background-color: #F5F5F5;
+	background-color: #DBD5CD;
 	height: 50vh;
 	width: 50vw;
 }
@@ -18,7 +34,7 @@ body {
 .rock-paper-scissors {
 	display: block;
 	margin:8rem auto;
-	background-color: #F5F5F5;
+	background-color: #22BDFD;
 	height: 50vh;
 	width: 50vw;
 }
@@ -28,4 +44,53 @@ body {
 	right:8rem;
 	height: 18rem;
 	width: 21rem;
+	border: 1px solid #FCF9F8;
+}
+.to-do {
+	display: block;
+	margin:8rem auto;
+	background-color: #F65F0F;
+	height: 50vh;
+	width: 50vw;
+}
+.to-do img{
+	height: 21rem;
+	width: 17rem;
+	position: absolute;
+	bottom:6rem;
+	right:8rem;
+}
+/* contact   */
+.contact {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	text-align: center;
+}
+.contact .btn-primary {
+	background-color: rgba(0, 0, 0, 0);
+	border: none;
+	color: grey;
+}
+.contact .btn:focus {
+	text-decoration-color: none;
+	outline: none;
+	box-shadow: none;
+}
+.contact .btn:hover {
+    transition: all 280ms ease-in-out;
+	letter-spacing: 3px;
+	border: 1px solid rgba(#fff, 0);
+}
+.contact-p {
+	margin-left: auto;
+	margin-right: auto;
+}
+.contact .card-body {
+	height: 8vh;
+}
+.contact .social {
+	position: absolute;
+	left: 1rem;
+	top:0;
 }
