--- a/work.css
+++ b/work.css
@@ -1,9 +1,13 @@
+* {
+	font-family: 'Muli', sans-serif;
+
+}
 body {
 	background-color: white;
 }
 /* Navigation Bar */
 .navbar {
-	background-color: #E7E7E7;
+	background-color:none;
 }
 .nav-item {
 	float:right;
@@ -15,7 +19,13 @@ body {
 h1 {
 	text-align: center;
 	margin-top: 3rem;
+	font-size: 4.5rem;
+}
+h2 {
+	color: white;
 	font-size: 3rem;
+	margin-left: 3rem;
+	font-weight: bold;
 }
 .calc {
 	display: block;
@@ -44,7 +54,7 @@ h1 {
 	right:8rem;
 	height: 18rem;
 	width: 21rem;
-	border: 1px solid #FCF9F8;
+	border: 2px solid #FCF9F8;
 }
 .to-do {
 	display: block;
@@ -62,7 +72,7 @@ h1 {
 }
 /* contact   */
 .contact {
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	width: 100%;
 	text-align: center;
