--- a/work.css
+++ b/work.css
@@ -3,7 +3,7 @@
 
 }
 body {
-	background-color: white;
+	background: linear-gradient(-90deg, #EEEEEE, white);
 }
 /* Navigation Bar */
 .navbar {
@@ -28,6 +28,7 @@ h2 {
 	font-weight: bold;
 }
 .calc {
+	position: relative;
 	display: block;
 	margin:8rem auto;
 	background-color: #DBD5CD;
@@ -36,12 +37,13 @@ h2 {
 }
 .calc img{
 	position: absolute;
-	bottom:6rem;
-	right:8rem;
+	bottom:-3rem;
+	right:-2rem;
 	height: 20rem;
 	width: 16rem;
 }
 .rock-paper-scissors {
+	position: relative;
 	display: block;
 	margin:8rem auto;
 	background-color: #22BDFD;
@@ -50,13 +52,14 @@ h2 {
 }
 .rock-paper-scissors img {
 	position: absolute;
-	bottom:6rem;
-	right:8rem;
+	bottom:-3rem;
+	right:-2rem;
 	height: 18rem;
 	width: 21rem;
 	border: 2px solid #FCF9F8;
 }
 .to-do {
+	position: relative;
 	display: block;
 	margin:8rem auto;
 	background-color: #F65F0F;
@@ -67,8 +70,14 @@ h2 {
 	height: 21rem;
 	width: 17rem;
 	position: absolute;
-	bottom:6rem;
-	right:8rem;
+	bottom:-3rem;
+	right:-2rem;
+}
+.projects a {
+	position: absolute;
+	color: white;
+	bottom: 1rem;
+	left: 1rem;
 }
 /* contact   */
 .contact {
