--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body {
 
 /* Navigation Bar */
 .navbar {
-	background-color: E7E7E7;
+	background-color:;
 }
 .nav-item {
 	float:right;
@@ -19,6 +19,27 @@ body {
 }
 
 
+
+
+/*     main content area       */
+
+.intro h1 {
+	font-size: 7vw;
+	text-shadow: 7px 7px #E8E8E8;
+
+}
+.intro h2 {
+	font-size: 7vw;
+	text-shadow: 7px 7px #E8E8E8;
+}
+.intro {
+	margin-top: 5rem;
+}
+.img-thumbnail {
+	border-radius: 50%;
+	max-width: 100%;
+	height: auto;
+}
 /* contact   */
 .contact {
 	position: absolute;
@@ -53,25 +74,8 @@ body {
 	left: 1rem;
 	top:0;
 }
-
-/*     main content area       */
-
-.intro h1 {
-	font-size: 7vw;
-	text-shadow: 7px 7px #E8E8E8;
-
-}
-.intro h2 {
-	font-size: 7vw;
-	text-shadow: 7px 7px #E8E8E8;
-}
-.intro {
-	margin-top: 5rem;
-}
-.img-thumbnail {
-	border-radius: 50%;
-	max-width: 100%;
-	height: auto;
+.social a {
+	color: grey;
 }
 /* testing out the css loader */
 
